# dotscan

./: .gitignore  app.py  config.py  main.py  packages.txt  pyproject.toml
collector/: auth.py  client.py  extractor.py  navigator.py
exporters/: csv_exporter.py  excel_exporter.py
models/: dot_record.py
