[project]
name = "dotscan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "html5lib>=1.1",
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "streamlit>=1.58.0",
]
